// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders with default theme max-width 1`] = `
.c0 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

<div
  className="c0"
/>
`;

exports[`Container renders with maxWidth 1`] = `
.c0 {
  max-width: 1024px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

<div
  className="c0"
/>
`;
